Fixing IceEdit Dark Mode (#2730)

--- a/ui/scss/src/_dark-mode.scss
+++ b/ui/scss/src/_dark-mode.scss
@@ -122,6 +122,7 @@ $dark-mode-input-border-focus: #007aff;
   }
 
   // Panels
+  #ice-body,
   .panel-heading,
   .panel-default {
     background: $dark-mode-background-paper !important;
